prevent page from jumping down initially

--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 body {
   background-image: url("../assets/background.png");
   background-size: 100vw 100vh;
